--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3,3 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+ul {
+    list-style: none;
+}
+
+.container {
+    max-width: 1170px;
+    width: 100%;
+    margin: 0 auto;
+}
